# conversations

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  playground_2.ipynb  pyproject.toml
.unclear/: AGB.doc
app/: server.py
context/: conversations.json  conversations.txt  ek_context.md  ek_context_en.md
context/few_shot_context/: conversation_dataset.json
dbase/: cables.csv  cables.db
vs/: chroma.sqlite3
