[tool.poetry]
name = "conversations"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
pydantic = "<2"
langchain-community = "^0.0.27"
faiss-cpu = "^1.8.0"
langchain-openai = "^0.0.8"
python-dotenv = "^1.0.1"
beautifulsoup4 = "^4.12.3"
unstructured = "^0.13.0"
markdown = "^3.6"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
