[tool.poetry]
name = "conversations"
version = "0.1.0"
description = ""
authors = ["Sven <svenduve@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]


[tool.poetry.dependencies]
python = ">=3.11,<3.12"
langchain = "^0.1.16"
langchain-community = "^0.0.34"
langserve = "^0.1.0"
langchain-core = "^0.1.45"
langchain-chroma = "^0.1.0"
ipython = "^8.23.0"
numpy = "^1.26.4"
langchain-openai = "^0.1.3"
ipykernel = "^6.29.4"
unstructured = "^0.13.3"
markdown = "^3.6"
cohere = "^5.3.3"
langchain-cli = "^0.0.21"
pydantic = "1.10.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
